fixed: layout issue

--- a/src/apps/billing/src/components/EditEcosystem/EditEcosystem.less
+++ b/src/apps/billing/src/components/EditEcosystem/EditEcosystem.less
@@ -1,7 +1,7 @@
 @import '~@zesty-io/core/colors.less';
 @import '~@zesty-io/core/typography.less';
 
-main {
+.EditEcosystem {
   display: flex;
   flex-direction: column;
   .row {
